--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4010720240511003",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4010720240511003",
     "js-base64": "^3.7.7",
+    "pinia": "^2.1.7",
     "vue": "3.4.21",
     "vue-i18n": "9.13.1"
   },
